creating subnavigation of gallery page

--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -9,4 +9,9 @@
     font-weight: bold;
     text-decoration: none;
     color: #222;
+    text-transform: uppercase;
+}
+.menu a:hover {
+    color: #c6326e;
+    transition: .4s;
 }
