--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,12 +1,13 @@
 .header {
-    background-color: #dacfcfc4;
+    background-color: #e7e7e7f5;
     padding: 0 3rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     position: fixed;
     width: 100%;
     height: 10vh;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.6);
 }
 
 .logo {
@@ -16,3 +17,7 @@
 .logo a {
     color: #222;
 }
+.logo span {
+    color: #c6326e;
+}
+
