--- a/src/components/CardInfo.module.css
+++ b/src/components/CardInfo.module.css
@@ -1,11 +1,11 @@
 .card {
-    width: 320px;
+    width: 300px;
     height: 370px;
     border-radius: 5px;
-  
+    z-index: -1;
     padding: 1rem;
     background-color: #d2d4d4e6;
-    
+    position: relative;
 }
 
 .card .img {
@@ -27,6 +27,12 @@
     flex-direction: column;
     row-gap: .6rem;
 }
+
+.card .card_info h4 {
+    font-weight: bold;
+    font-size: 1rem;
+}
+
 .card .card_info .info_title {
     text-align: center;
     font-size: 1.4rem;
@@ -47,20 +53,26 @@
 .card .card_info .info .price {
     color: #c6326e;  
 }
-.card .card_info
 
-.card .buttons {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 1rem;
-    display: grid;
-    place-items: center;
-}
-.card .buttons button {
+.botao {
     font-size: 1.2rem;
     padding: .8rem;
     width: 180px;
     margin: 1rem auto;
-    
-    
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0%;
+    background-color: darkslategray;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+    transition: all .4s ease;
+}
+.botao:hover {
+    background: transparent;
+    border: 1px solid darkslategray;
+    color: #c6326e;
 }
