--- a/src/components/Contatos.module.css
+++ b/src/components/Contatos.module.css
@@ -1,6 +1,56 @@
 .contato {
-    height: 80vh;
-    padding: 3rem;
-    text-align: center;
+    height: 100vh;
     background-color: gainsboro;
+    display: grid;
+    place-items: center;
+    padding-top: 5rem;
+}
+
+form {
+    background-color: rgb(199, 205, 203);
+    width: 600px;
+    height: 440px;
+    padding: 1.5rem 1rem;
+    
+}
+
+form h1 {
+    padding: 1.5rem 0;
+    text-align: center;
+    color: #222;
+}
+
+.names {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.email_phone {
+    display: flex;
+    gap: 1rem;
+}
+
+form input, textarea {
+    padding: .7rem;
+    width: 100%;
+    font-size: 1.2rem;
+    color: #222;
+    border-radius: 5px;
+    border: 1px solid #333;
+    outline: none;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+}
+.description label {
+    font-size: 1.2rem;
+    padding: 1rem 0;
+}
+
+form textarea {
+    width: 100%;
+    height: 140px;
 }
