--- a/src/components/Location.module.css
+++ b/src/components/Location.module.css
@@ -6,9 +6,16 @@
     display: grid;
     place-items: center;
 }
-
+.container h1 {
+    margin-top: 4rem;
+}
 .location_map {
     border: 2px solid white;
-    width: 750px;
+    width: fit-content;
     height: 320px;
+}
+
+.location_map img {
+    width: 100%;
+    height: 100%;
 }
