--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -2,12 +2,13 @@
     background-color: #e7e7e7f5;
     padding: 0 3rem;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-between;
+    align-items: end;
     position: fixed;
     width: 100%;
-    height: 10vh;
+    height: 15vh;
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.6);
+    padding-bottom: 1rem;
 }
 
 .logo {
@@ -21,3 +22,7 @@
     color: #c6326e;
 }
 
+.header .menu {
+    font-size: 4rem;
+    width: 40px;
+}
