--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -2,13 +2,53 @@
     background-color: #e7e7e7f5;
     padding: 0 3rem;
     display: flex;
-    justify-content: space-between;
-    align-items: end;
+    flex-direction: column;
+    align-items: center;
     position: fixed;
     width: 100%;
-    height: 15vh;
+    height: 16vh;
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.6);
     padding-bottom: 1rem;
+    z-index: 10;
+}
+
+/*  Top Header */
+
+.TopHeader {
+    flex: 1;
+    width: 100%;
+    background-color: darkslategray;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    width: 100%;
+    padding: .5rem 1rem;
+}
+.content {
+    width: 60%;
+    padding: 0 1rem;
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
+    color: #fff;
+}
+.content h3, h4 {
+    font-weight: 400;
+    font-size: 1rem;
+    display: flex;
+    gap: 1rem;
+}
+
+/*  Bottom Header */
+
+.BottomHeader {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: .6rem 2rem;
+    flex: 2;
+    height: 100%;
 }
 
 .logo {
@@ -22,7 +62,30 @@
     color: #c6326e;
 }
 
-.header .menu {
-    font-size: 4rem;
+.menu {
+    font-size: 1.6rem;
     width: 40px;
+    cursor: pointer;
 }
+
+
+/*  Navbar  */
+
+.menu {
+    display: flex;
+    gap: 1.67rem;
+    list-style: none;
+}
+
+.menu a {
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: #222;
+    text-transform: uppercase;
+}
+.menu a:hover {
+    color: #c6326e;
+    transition: .4s;
+}
+
