--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -90,6 +90,9 @@ section {
     display: grid;
     grid-template-columns: repeat(2, 2fr);
     place-items: center;
+    position: relative;
+    
+    margin-bottom: 2rem;
 }
 
 .about .content_info h1 {
@@ -157,6 +160,46 @@ section {
 }
 
 
+.services {
+    height: 350px;
+    margin: 0 auto;
+    max-width: 900px;
+    width: 160%;
+    display: flex;
+    margin-left: 7rem;
+    justify-content: space-around;
+    gap: 2rem;
+    position: absolute;
+    bottom: -8%;
+    left: 6%;
+    
+}
+.services > div {
+    width: 260px;
+    height: 260px;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(220, 218, 215);
+    border-radius: 7px;
+    box-shadow: 1px 2px 10px rgba(0,0,0,0.7);
+    transition: all .4s ease;
+}
+.services > div:hover {
+    background-color: #d0cccc;
+    box-shadow: 1px 2px 17px rgba(0,0,0,0.5);
+    transform: translateY(-6px);
+}
+.services > div p {
+    text-align: center;
+    margin-top: 1rem;
+}
+.services i {
+    font-size: 2rem;
+    color: #c6326e;
+}
 
 /*  Gallery Section  */
 
@@ -204,4 +247,12 @@ section {
 }
 .gallery .galeria_content .card .car_img img {
     width: 100%;
+}
+
+
+
+@media (min-width: 1300px) and (max-width: 1980px) {
+    .about {
+        height: 100vh;
+    }
 }
