--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -59,7 +59,7 @@
     color: #222;
 }
 .logo span {
-    color: #c6326e;
+    color: var(--primary-color);
 }
 
 .menu {
@@ -85,7 +85,7 @@
     text-transform: uppercase;
 }
 .menu a:hover {
-    color: #c6326e;
+    color: var(--primary-color);
     transition: .4s;
 }
 
