--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -27,24 +27,24 @@ section {
     margin: 2.7rem 0;
 }
 .home button {
-    padding: 1.2rem 1rem;
+    padding: 1rem .6rem;
     font-size: 1.2rem;
     border-radius: 5px;
     cursor: pointer;
     border: none;
-    background-color: #c6326e;
+    background-color: var(--primary-color);
     color: #eee;
     font-weight: bold;
-    width: 180px;
+    width: 160px;
 }
 .home button:hover {
-    background-color: #c6326de3;
+    background-color: var(--primary-color);
     transition: .4s;
 }
 .home .buttons {
     display: flex;
     justify-content: space-evenly;
-
+    gap: 1rem;
 }
 
 .home .left_content {
@@ -52,35 +52,55 @@ section {
     max-width: 950px;
 }
 
+.left_content .logoImage {
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    border-radius: 50%;
+    margin-bottom: 2.5rem;
+    border: 5px solid var(--primary-color);
+}
+
+.left_content .logoImage  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
 .home .right_content {
-    display: grid;
-    grid-template-columns: repeat(2, 2fr);
-    column-gap: 2.8rem;
-    row-gap: 2.8rem;
+    width: 100%;
+    height: 100%;    
 }
 .home .right_content .brand_content {
-    padding: 1rem;
-    margin: auto;
-    background-color: #534e4e90;
+    max-width: 160px;
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    top: 50%;
+    right: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
     border-radius: 5px;
-    width: 200px;
     transition: .4s;
-    display: grid;
-    place-items: center;
+    background-color: #777777aa;
 }
 .home .right_content .brand {
-    font-size: 2rem;
+    font-size: 1.3rem;
+    letter-spacing: 1px;
     color: #fff;
-    font-weight: bold;
+    font-weight: 500;
     cursor: pointer;
     transition: .4s;
-    padding-bottom: .5rem;
+    border-bottom: 2px solid gray;
+    width: 100%;
+    text-align: center;
 }
-.home .right_content .brand_content:hover {
-    background-color: #635f5f9c;
-}
-.home .right_content .brand_content:hover .brand {
-    color: #c6326e;
+.home .right_content .brand_content .brand:hover {
+    color: var(--primary-color);
 }
 
 /*  About Section  */
