--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -73,7 +73,7 @@ section {
     height: 100%;    
 }
 .home .right_content .brand_content {
-    max-width: 160px;
+    max-width: 180px;
     width: 100%;
     height: 200px;
     position: absolute;
@@ -88,16 +88,22 @@ section {
     transition: .4s;
     background-color: #777777aa;
 }
+.brand_content .brand_box {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    cursor: pointer;
+}
+.brand_content .brand_box img {
+    width: 26px;
+}
 .home .right_content .brand {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     letter-spacing: 1px;
     color: #fff;
     font-weight: 500;
-    cursor: pointer;
     transition: .4s;
     border-bottom: 2px solid gray;
-    width: 100%;
-    text-align: center;
 }
 .home .right_content .brand_content .brand:hover {
     color: var(--primary-color);
